--- a/VidCoder/Resources/EnumsRes.pt.resx
+++ b/VidCoder/Resources/EnumsRes.pt.resx
@@ -127,7 +127,7 @@
     <value>Nenhum</value>
   </data>
   <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Estrito</value>
+    <value>Restrito</value>
   </data>
   <data name="Custom" xml:space="preserve">
     <value>Personalizado</value>
