--- a/VidCoder/Resources/SubtitleRes.zh-Hant.resx
+++ b/VidCoder/Resources/SubtitleRes.zh-Hant.resx
@@ -117,67 +117,61 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PlaySourceButton" xml:space="preserve">
-    <value>Reproduzir fonte</value>
+  <data name="SubtitlesWindowTitle" xml:space="preserve">
+    <value>字幕</value>
   </data>
-  <data name="EncodePreviewClipButton" xml:space="preserve">
-    <value>Codificar pré-visualização</value>
+  <data name="RemoveSubtitleTrack" xml:space="preserve">
+    <value>移除此軌</value>
   </data>
-  <data name="EncodePreviewClipToolTip" xml:space="preserve">
-    <value>Codifica e lê um pequeno excerto de pré-visualização da tela seleccionada. Usa as configurações de codificação actuais.</value>
+  <data name="SubtitlesFromSourceLabel" xml:space="preserve">
+    <value>來源字幕軌:</value>
   </data>
-  <data name="GeneratingPreview" xml:space="preserve">
-    <value>Gerando pré-visualização...</value>
+  <data name="QuickTimeSubtitlesWarning" xml:space="preserve">
+    <value>除非使用 .m4v 副檔名，否則文字字幕可能無法於 Quicktime 正常顯示。</value>
   </data>
-  <data name="PlaySourceDisabledBluRayToolTip" xml:space="preserve">
-    <value>Pré-visualização do Blu-Ray de origem ainda não é suportada.</value>
+  <data name="NameColumn" xml:space="preserve">
+    <value>名稱</value>
   </data>
-  <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
-    <value>Não foi encontrado nenhum leitor de DVD. Instale o VLC ou o MPC-HC para utilizar este recurso.</value>
+  <data name="DefaultColumn" xml:space="preserve">
+    <value>預設</value>
   </data>
-  <data name="PlaySourceToolTip" xml:space="preserve">
-    <value>Reproduzir o vídeo de origem.</value>
+  <data name="ForcedOnlyColumn" xml:space="preserve">
+    <value>僅強制</value>
   </data>
-  <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
-    <value>Falha ao gerar excerto de pré-visualização. Consulte o relatório para mais detalhes.</value>
+  <data name="BurnedInColumn" xml:space="preserve">
+    <value>內嵌</value>
   </data>
-  <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
-    <value>Geração do excerto de pré-visualização falhou</value>
+  <data name="ExternalSubtitlesLabel" xml:space="preserve">
+    <value>外部字幕:</value>
   </data>
-  <data name="PreviewWindowTitleSimple" xml:space="preserve">
-    <value>Pré-visualização: {0} x {1}</value>
+  <data name="FileColumn" xml:space="preserve">
+    <value>檔案</value>
   </data>
-  <data name="PreviewWindowTitleComplex" xml:space="preserve">
-    <value>Pré-visualização: Exibir {0} x {1} - Armazenamento {2} x {3}</value>
+  <data name="LanguageColumn" xml:space="preserve">
+    <value>語言</value>
   </data>
-  <data name="NoVideoSourceTitle" xml:space="preserve">
-    <value>Pré-Visualização: Nenhuma fonte de vídeo</value>
+  <data name="CharCodeColumn" xml:space="preserve">
+    <value>字元編碼</value>
   </data>
-  <data name="Seconds" xml:space="preserve">
-    <value>segundos</value>
+  <data name="OffsetColumn" xml:space="preserve">
+    <value>偏移量 (毫秒)</value>
   </data>
-  <data name="PreviewDisplay_Corners" xml:space="preserve">
-    <value>Cantos</value>
+  <data name="ImportSrtButton" xml:space="preserve">
+    <value>匯入 .srt 檔...</value>
   </data>
-  <data name="PreviewDisplay_FitToWindow" xml:space="preserve">
-    <value>Ajustar à janela</value>
+  <data name="BurnedOverlapWarning" xml:space="preserve">
+    <value>其他字幕軌將與內嵌字幕重疊。</value>
   </data>
-  <data name="PreviewDisplay_OneToOne" xml:space="preserve">
-    <value>1:1</value>
+  <data name="ForeignAudioSearch" xml:space="preserve">
+    <value>外語音訊搜尋</value>
   </data>
-  <data name="ViewLabel" xml:space="preserve">
-    <value>Visualizar:</value>
+  <data name="AddSourceNoSubtitlesToolTip" xml:space="preserve">
+    <value>來源視訊中無字幕。</value>
   </data>
-  <data name="TopMargin" xml:space="preserve">
-    <value>Margem superior</value>
+  <data name="SrtFilePickerText" xml:space="preserve">
+    <value>新增字幕檔</value>
   </data>
-  <data name="LeftMargin" xml:space="preserve">
-    <value>Margem esquerda</value>
-  </data>
-  <data name="RightMargin" xml:space="preserve">
-    <value>Margem direita</value>
-  </data>
-  <data name="BottomMargin" xml:space="preserve">
-    <value>Margem inferior</value>
+	<data name="DuplicateSubtitleTrack" xml:space="preserve">
+    <value>複製此軌</value>
   </data>
 </root>
