--- a/VidCoder/Resources/CommonRes.zh-Hant.resx
+++ b/VidCoder/Resources/CommonRes.zh-Hant.resx
@@ -117,67 +117,127 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PlaySourceButton" xml:space="preserve">
-    <value>Reproduzir fonte</value>
+  <data name="AboutLicense" xml:space="preserve">
+    <value>本程式是自由軟體，您可以遵照自由軟體基金會 (Free Software Foundation) 出版的 GNU 通用公共許可證條款 (GNU General Public License) 第二版修改及重新發佈此程式，或自由選擇使用任何更新的版本。 
+
+此程式在沒有任何保證的前提下發佈供大眾使用，亦不保證程式可能涉及之商業行為或特定用途。細節請參閱 GNU 通用公共許可證。 
+
+程式隨附 GNU 通用公共許可證的完整副本以供參考。</value>
   </data>
-  <data name="EncodePreviewClipButton" xml:space="preserve">
-    <value>Codificar pré-visualização</value>
+  <data name="BurnedSubtitleToolTip" xml:space="preserve">
+    <value>將字幕烙印至畫面上。若使用內嵌字幕，播放時無法選擇取消字幕。</value>
   </data>
-  <data name="EncodePreviewClipToolTip" xml:space="preserve">
-    <value>Codifica e lê um pequeno excerto de pré-visualização da tela seleccionada. Usa as configurações de codificação actuais.</value>
+  <data name="DefaultSubtitleToolTip" xml:space="preserve">
+    <value>將此字幕軌標記為預設值。此字幕軌將在播放時預設為顯示字幕。</value>
   </data>
-  <data name="GeneratingPreview" xml:space="preserve">
-    <value>Gerando pré-visualização...</value>
+  <data name="ForcedSubtitleToolTip" xml:space="preserve">
+    <value>僅從特定軌強制顯示字幕。通常用於少量外語對話。</value>
   </data>
-  <data name="PlaySourceDisabledBluRayToolTip" xml:space="preserve">
-    <value>Pré-visualização do Blu-Ray de origem ainda não é suportada.</value>
+  <data name="OffsetSubtitleToolTip" xml:space="preserve">
+    <value>提前或延遲指定字幕的顯示時間點。</value>
   </data>
-  <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
-    <value>Não foi encontrado nenhum leitor de DVD. Instale o VLC ou o MPC-HC para utilizar este recurso.</value>
+  <data name="QueueColumnNameRange" xml:space="preserve">
+    <value>範圍</value>
+    <comment>The label for the queue column that specifies what portion of the video to encode. (Like 25:23 - 37:50)</comment>
   </data>
-  <data name="PlaySourceToolTip" xml:space="preserve">
-    <value>Reproduzir o vídeo de origem.</value>
+  <data name="QueueColumnNameDestination" xml:space="preserve">
+    <value>輸出位置</value>
   </data>
-  <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
-    <value>Falha ao gerar excerto de pré-visualização. Consulte o relatório para mais detalhes.</value>
+  <data name="QueueColumnNameSource" xml:space="preserve">
+    <value>來源</value>
   </data>
-  <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
-    <value>Geração do excerto de pré-visualização falhou</value>
+  <data name="QueueColumnNameTitle" xml:space="preserve">
+    <value>標題</value>
   </data>
-  <data name="PreviewWindowTitleSimple" xml:space="preserve">
-    <value>Pré-visualização: {0} x {1}</value>
+  <data name="QueueColumnNameAudioQuality" xml:space="preserve">
+    <value>音訊品質</value>
   </data>
-  <data name="PreviewWindowTitleComplex" xml:space="preserve">
-    <value>Pré-visualização: Exibir {0} x {1} - Armazenamento {2} x {3}</value>
+  <data name="QueueColumnNameAudioEncoder" xml:space="preserve">
+    <value>音訊編碼器</value>
   </data>
-  <data name="NoVideoSourceTitle" xml:space="preserve">
-    <value>Pré-Visualização: Nenhuma fonte de vídeo</value>
+  <data name="QueueColumnNameVideoEncoder" xml:space="preserve">
+    <value>視訊編碼器</value>
   </data>
-  <data name="Seconds" xml:space="preserve">
-    <value>segundos</value>
+  <data name="QueueColumnNameVideoQuality" xml:space="preserve">
+    <value>視訊品質</value>
   </data>
-  <data name="PreviewDisplay_Corners" xml:space="preserve">
-    <value>Cantos</value>
+  <data name="QueueEtaToolTip" xml:space="preserve">
+    <value>完成工作佇列中所有工作的剩餘所需時間預估值。</value>
   </data>
-  <data name="PreviewDisplay_FitToWindow" xml:space="preserve">
-    <value>Ajustar à janela</value>
+  <data name="QueueColumnNameDuration" xml:space="preserve">
+    <value>影片長度</value>
   </data>
-  <data name="PreviewDisplay_OneToOne" xml:space="preserve">
-    <value>1:1</value>
+  <data name="ForeignAudioSearchToolTip" xml:space="preserve">
+    <value>搜尋可能包含外語對話的字幕軌，適用於非英語的影片。</value>
   </data>
-  <data name="ViewLabel" xml:space="preserve">
-    <value>Visualizar:</value>
+  <data name="Default" xml:space="preserve">
+    <value>預設</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
-  <data name="TopMargin" xml:space="preserve">
-    <value>Margem superior</value>
+  <data name="Custom" xml:space="preserve">
+    <value>自訂</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
-  <data name="LeftMargin" xml:space="preserve">
-    <value>Margem esquerda</value>
+  <data name="Browse" xml:space="preserve">
+    <value>瀏覽...</value>
   </data>
-  <data name="RightMargin" xml:space="preserve">
-    <value>Margem direita</value>
+  <data name="Delete" xml:space="preserve">
+    <value>刪除</value>
   </data>
-  <data name="BottomMargin" xml:space="preserve">
-    <value>Margem inferior</value>
+  <data name="PreviewLabel" xml:space="preserve">
+    <value>預覽</value>
+  </data>
+  <data name="Automatic" xml:space="preserve">
+    <value>自動</value>
+  </data>
+  <data name="Off" xml:space="preserve">
+    <value>關閉</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
+  </data>
+  <data name="All" xml:space="preserve">
+    <value>全部</value>
+  </data>
+  <data name="StreamChoice" xml:space="preserve">
+    <value>串流 {0}</value>
+    <comment>Used in the encoding settings dialog to mark which audio stream an audio encoding is targeting. By default the encoding works on all streams but you can target it to affect only the first stream, in which case it would label it "Stream 1"</comment>
+  </data>
+  <data name="Ok" xml:space="preserve">
+    <value>確定</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>取消</value>
+  </data>
+  <data name="Disabled" xml:space="preserve">
+    <value>停用</value>
+  </data>
+  <data name="Remove" xml:space="preserve">
+    <value>移除</value>
+  </data>
+  <data name="Copy" xml:space="preserve">
+    <value>複製</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>是</value>
+  </data>
+  <data name="No" xml:space="preserve">
+    <value>否</value>
+  </data>
+  <data name="CouldNotAccessDirectoriesError" xml:space="preserve">
+    <value>無法存取以下目錄:</value>
+  </data>
+  <data name="None" xml:space="preserve">
+    <value>無</value>
+  </data>
+  <data name="Succeeded" xml:space="preserve">
+    <value>成功</value>
+  </data>
+  <data name="Failed" xml:space="preserve">
+    <value>失敗</value>
+  </data>
+  <data name="FilePickerExtTemplate" xml:space="preserve">
+    <value>{0} 檔案</value>
+  </data>
+  <data name="QueueColumnNamePreset" xml:space="preserve">
+    <value>設定值</value>
   </data>
 </root>
