--- a/VidCoder/Resources/EnumsRes.zh-Hant.resx
+++ b/VidCoder/Resources/EnumsRes.zh-Hant.resx
@@ -117,67 +117,76 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PlaySourceButton" xml:space="preserve">
-    <value>Reproduzir fonte</value>
+  <data name="Anamorphic_Custom" xml:space="preserve">
+    <value>自訂</value>
   </data>
-  <data name="EncodePreviewClipButton" xml:space="preserve">
-    <value>Codificar pré-visualização</value>
+  <data name="Anamorphic_Loose" xml:space="preserve">
+    <value>寬鬆</value>
   </data>
-  <data name="EncodePreviewClipToolTip" xml:space="preserve">
-    <value>Codifica e lê um pequeno excerto de pré-visualização da tela seleccionada. Usa as configurações de codificação actuais.</value>
+  <data name="Anamorphic_None" xml:space="preserve">
+    <value>無</value>
   </data>
-  <data name="GeneratingPreview" xml:space="preserve">
-    <value>Gerando pré-visualização...</value>
+  <data name="Anamorphic_Strict" xml:space="preserve">
+    <value>嚴格</value>
   </data>
-  <data name="PlaySourceDisabledBluRayToolTip" xml:space="preserve">
-    <value>Pré-visualização do Blu-Ray de origem ainda não é suportada.</value>
+  <data name="Custom" xml:space="preserve">
+    <value>自訂</value>
   </data>
-  <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
-    <value>Não foi encontrado nenhum leitor de DVD. Instale o VLC ou o MPC-HC para utilizar este recurso.</value>
+  <data name="Decomb_Bob" xml:space="preserve">
+    <value>Bob</value>
   </data>
-  <data name="PlaySourceToolTip" xml:space="preserve">
-    <value>Reproduzir o vídeo de origem.</value>
+  <data name="Decomb_Fast" xml:space="preserve">
+    <value>快速</value>
   </data>
-  <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
-    <value>Falha ao gerar excerto de pré-visualização. Consulte o relatório para mais detalhes.</value>
+  <data name="Default" xml:space="preserve">
+    <value>預設</value>
   </data>
-  <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
-    <value>Geração do excerto de pré-visualização falhou</value>
+  <data name="Deinterlace_Bob" xml:space="preserve">
+    <value>Bob</value>
   </data>
-  <data name="PreviewWindowTitleSimple" xml:space="preserve">
-    <value>Pré-visualização: {0} x {1}</value>
+  <data name="Deinterlace_Fast" xml:space="preserve">
+    <value>快速</value>
   </data>
-  <data name="PreviewWindowTitleComplex" xml:space="preserve">
-    <value>Pré-visualização: Exibir {0} x {1} - Armazenamento {2} x {3}</value>
+  <data name="Deinterlace_Slow" xml:space="preserve">
+    <value>緩慢</value>
   </data>
-  <data name="NoVideoSourceTitle" xml:space="preserve">
-    <value>Pré-Visualização: Nenhuma fonte de vídeo</value>
+  <data name="Deinterlace_Slower" xml:space="preserve">
+    <value>較慢</value>
   </data>
-  <data name="Seconds" xml:space="preserve">
-    <value>segundos</value>
+  <data name="Denoise_Medium" xml:space="preserve">
+    <value>中等</value>
   </data>
-  <data name="PreviewDisplay_Corners" xml:space="preserve">
-    <value>Cantos</value>
+  <data name="Denoise_Strong" xml:space="preserve">
+    <value>強</value>
   </data>
-  <data name="PreviewDisplay_FitToWindow" xml:space="preserve">
-    <value>Ajustar à janela</value>
+  <data name="Denoise_Weak" xml:space="preserve">
+    <value>弱</value>
   </data>
-  <data name="PreviewDisplay_OneToOne" xml:space="preserve">
-    <value>1:1</value>
+  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
+    <value>不執行任何動作</value>
   </data>
-  <data name="ViewLabel" xml:space="preserve">
-    <value>Visualizar:</value>
+  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
+    <value>退出 {0}:</value>
   </data>
-  <data name="TopMargin" xml:space="preserve">
-    <value>Margem superior</value>
+  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
+    <value>登出</value>
   </data>
-  <data name="LeftMargin" xml:space="preserve">
-    <value>Margem esquerda</value>
+  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
+    <value>關機</value>
   </data>
-  <data name="RightMargin" xml:space="preserve">
-    <value>Margem direita</value>
+  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
+    <value>休眠</value>
   </data>
-  <data name="BottomMargin" xml:space="preserve">
-    <value>Margem inferior</value>
+  <data name="Off" xml:space="preserve">
+    <value>關閉</value>
+  </data>
+  <data name="VideoRangeType_Chapters" xml:space="preserve">
+    <value>章節</value>
+  </data>
+  <data name="VideoRangeType_Frames" xml:space="preserve">
+    <value>畫格</value>
+  </data>
+  <data name="VideoRangeType_Seconds" xml:space="preserve">
+    <value>時間範圍</value>
   </data>
 </root>
