--- a/VidCoder/Resources/MainRes.de.resx
+++ b/VidCoder/Resources/MainRes.de.resx
@@ -136,7 +136,7 @@
     <value>Öffne Videodatei...</value>
   </data>
   <data name="OpenDiscFolder" xml:space="preserve">
-    <value> Öffne DVD/Blu-ray-Ordner...</value>
+    <value>Öffne DVD/Blu-ray-Ordner...</value>
   </data>
   <data name="EnqueueMultipleFiles" xml:space="preserve">
     <value>Mehrere Dateien in Warteschlange einreihen...</value>
@@ -235,7 +235,7 @@
     <value>Ziel:</value>
   </data>
   <data name="DestinationToolTip" xml:space="preserve">
-    <value>Zum Auswählen des Zielordners der Encodierung klicken.</value>
+    <value>Hier klicken, um das Ziel der Encodierung zu bearbeiten.</value>
   </data>
   <data name="SelectOutputPathButton" xml:space="preserve">
     <value>Ausgabepfad wählen...</value>
@@ -418,13 +418,13 @@
     <value>AppleTV-3</value>
   </data>
   <data name="Preset_Universal" xml:space="preserve">
-    <value>Universal</value>
+    <value>Universelles Profil</value>
   </data>
   <data name="Preset_HighProfile" xml:space="preserve">
     <value>Hohes Profil</value>
   </data>
   <data name="Preset_Normal" xml:space="preserve">
-    <value>Normal</value>
+    <value>Normales Profil</value>
   </data>
   <data name="Preset_WindowsPhone7" xml:space="preserve">
     <value>Windows Phone 7</value>
