--- a/VidCoder/Resources/MainRes.zh.resx
+++ b/VidCoder/Resources/MainRes.zh.resx
@@ -118,277 +118,278 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TitleLabel" xml:space="preserve">
-    <value>標題:</value>
+    <value>标题：</value>
   </data>
   <data name="SettingsLabel" xml:space="preserve">
-    <value>設定</value>
+    <value>设置</value>
   </data>
   <data name="AddToQueueLabel" xml:space="preserve">
-    <value>新增至工作佇列</value>
+    <value>将添加到队列</value>
   </data>
   <data name="AddMultipleTitlesToQueueLabel" xml:space="preserve">
-    <value>新增多個章節標題至工作佇列...</value>
+    <value>新增多个章节标题至工作队列...</value>
   </data>
   <data name="FileMenu" xml:space="preserve">
-    <value>檔案</value>
+    <value>文件</value>
   </data>
   <data name="OpenVideoFile" xml:space="preserve">
-    <value>開啟視訊檔...</value>
+    <value>打开视频文件...</value>
   </data>
   <data name="OpenDiscFolder" xml:space="preserve">
-    <value>開啟 DVD/藍光 資料夾...</value>
+    <value>打开 DVD 蓝光文件夹...</value>
   </data>
   <data name="EnqueueMultipleFiles" xml:space="preserve">
-    <value>加入多個檔案至工作佇列...</value>
+    <value>加入多个文件至工作队列...</value>
   </data>
   <data name="EnqueueMultipleTitles" xml:space="preserve">
-    <value>新增多個章節標題至工作佇列...</value>
+    <value>新增多个章节标题至工作队列...</value>
   </data>
   <data name="ToolsMenu" xml:space="preserve">
-    <value>工具</value>
+    <value>工具：</value>
   </data>
   <data name="ImportPreset" xml:space="preserve">
-    <value>匯入設定值...</value>
+    <value>导入预设...</value>
   </data>
   <data name="ExportPreset" xml:space="preserve">
-    <value>匯出設定值...</value>
+    <value>导出预设...</value>
   </data>
   <data name="OptionsMenuItem" xml:space="preserve">
-    <value>選項...</value>
+    <value>选项...</value>
   </data>
   <data name="Play" xml:space="preserve">
     <value>播放</value>
   </data>
   <data name="Edit" xml:space="preserve">
-    <value>編輯</value>
+    <value>编辑</value>
   </data>
   <data name="OpenContainingFolder" xml:space="preserve">
-    <value>開啟所在資料夾</value>
+    <value>打开所在的文件夹</value>
   </data>
   <data name="ClearCompleted" xml:space="preserve">
-    <value>清除完成項目</value>
+    <value>清除已完成项目</value>
   </data>
   <data name="ExitMenuItem" xml:space="preserve">
-    <value>離開</value>
+    <value>退出</value>
   </data>
   <data name="WindowsMenu" xml:space="preserve">
-    <value>視窗</value>
+    <value>窗口</value>
   </data>
   <data name="EncodingSettingsMenuItem" xml:space="preserve">
-    <value>編碼設定</value>
+    <value>编码设置</value>
   </data>
   <data name="PreviewMenuItem" xml:space="preserve">
-    <value>預覽</value>
+    <value>预览</value>
   </data>
   <data name="LogMenuItem" xml:space="preserve">
-    <value>記錄</value>
+    <value>记录</value>
   </data>
   <data name="HelpMenu" xml:space="preserve">
-    <value>説明</value>
+    <value>帮助</value>
   </data>
   <data name="VidCoderHomepageMenuItem" xml:space="preserve">
-    <value>VidCoder 首頁</value>
+    <value>VidCoder主页</value>
   </data>
   <data name="ReportABugMenuItem" xml:space="preserve">
-    <value>回報臭蟲</value>
+    <value>报告 Bug</value>
   </data>
   <data name="AboutVidCoderMenuItem" xml:space="preserve">
-    <value>關於 VidCoder...</value>
+    <value>关于 VidCoder......</value>
   </data>
   <data name="ChooseVideoSourceLabel" xml:space="preserve">
-    <value>選擇視訊來源:</value>
+    <value>选择一个视频源：</value>
   </data>
   <data name="SourceLabel" xml:space="preserve">
-    <value>來源:</value>
+    <value>来源：</value>
   </data>
   <data name="ScanningSourceLabel" xml:space="preserve">
-    <value>掃描來源中...</value>
+    <value>正在扫描源...</value>
   </data>
   <data name="Recent" xml:space="preserve">
-    <value>最近使用項目</value>
+    <value>最近使用项目</value>
   </data>
   <data name="DragFilesHereLabel" xml:space="preserve">
-    <value>(或拖拉視訊檔案/資料夾至此)</value>
+    <value>(或拖拉视频文件/文件夹至此)</value>
   </data>
   <data name="ScanErrorLabel" xml:space="preserve">
-    <value>掃描時發生錯誤。</value>
+    <value>扫描时出现一个错误。</value>
   </data>
   <data name="AudioLabel" xml:space="preserve">
-    <value>音訊:</value>
+    <value>音频：</value>
   </data>
   <data name="VideoLabel" xml:space="preserve">
-    <value>視訊:</value>
+    <value>视频：</value>
   </data>
   <data name="SubtitlesLabel" xml:space="preserve">
-    <value>字幕:</value>
+    <value>字幕：</value>
   </data>
   <data name="AddTrackButton" xml:space="preserve">
-    <value>新增音軌</value>
+    <value>新增音轨</value>
   </data>
   <data name="ChapterMarkersLabel" xml:space="preserve">
-    <value>章節編輯器:</value>
+    <value>章节编辑器：</value>
   </data>
   <data name="EditButton" xml:space="preserve">
-    <value>編輯...</value>
+    <value>编辑...</value>
   </data>
   <data name="DestinationLabel" xml:space="preserve">
-    <value>輸出位置:</value>
+    <value>输入位置:</value>
   </data>
   <data name="DestinationToolTip" xml:space="preserve">
-    <value>點擊以編輯編碼檔案輸出位置。</value>
+    <value>点击以编辑编码文件输出位置。</value>
   </data>
   <data name="SelectOutputPathButton" xml:space="preserve">
-    <value>選擇輸出路徑...</value>
+    <value>选择输出路径...</value>
   </data>
   <data name="EncodingLabel" xml:space="preserve">
-    <value>編碼:</value>
+    <value>编码：</value>
   </data>
   <data name="Stop" xml:space="preserve">
     <value>停止</value>
   </data>
   <data name="Pause" xml:space="preserve">
-    <value>暫停</value>
+    <value>暂停</value>
   </data>
   <data name="MoveToTopMenuItem" xml:space="preserve">
-    <value>移至最上方</value>
+    <value>移至顶部</value>
   </data>
   <data name="MoveToBottomMenuItem" xml:space="preserve">
-    <value>移至最下方</value>
+    <value>移至底部</value>
   </data>
   <data name="CustomizeColumnsMenuItem" xml:space="preserve">
-    <value>自訂欄位...</value>
+    <value>自定义字段...</value>
   </data>
   <data name="CurrentFpsLabel" xml:space="preserve">
-    <value>目前 FPS:</value>
+    <value>当前 FPS：</value>
   </data>
   <data name="AverageFpsLabel" xml:space="preserve">
-    <value>平均 FPS:</value>
+    <value>平均 FPS：</value>
   </data>
   <data name="PickDiscFolderHelpText" xml:space="preserve">
-    <value>選擇 DVD 或藍光資料夾。</value>
+    <value>选 DVD 或蓝光的文件夹。</value>
   </data>
   <data name="EncodesInProgressExitWarning" xml:space="preserve">
-    <value>仍有編碼工作進行中，您確定要離開嗎?</value>
+    <value>仍有编码工作进行中，您确定要退出吗?</value>
   </data>
   <data name="EncodesInProgressExitWarningTitle" xml:space="preserve">
-    <value>編碼進行中</value>
+    <value>编码进行中</value>
   </data>
   <data name="ForeignAudioSearch" xml:space="preserve">
-    <value>外語音訊搜尋</value>
+    <value>外语音频搜索</value>
   </data>
   <data name="NoneParen" xml:space="preserve">
-    <value>(無)</value>
+    <value>(无)</value>
   </data>
   <data name="TracksSummaryMultiple" xml:space="preserve">
-    <value>{0} 軌</value>
+    <value>{0} 轨</value>
   </data>
   <data name="SaveChangesPresetMessage" xml:space="preserve">
-    <value>您想儲存目前的預設值變更嗎?</value>
+    <value>你想要将更改保存到您当前预设吗？</value>
   </data>
   <data name="SaveChangesPresetTitle" xml:space="preserve">
-    <value>儲存目前的設定值?</value>
+    <value>保存当前预设值？</value>
   </data>
   <data name="DiscNotInDriveError" xml:space="preserve">
-    <value>碟片已移除，無法載入供編輯。</value>
+    <value>盘片已移除，无法加载供编辑。</value>
   </data>
   <data name="PresetNameRestoredFromQueue" xml:space="preserve">
-    <value>自工作佇列中還原</value>
+    <value>从队列中恢复</value>
   </data>
   <data name="PresetNameRestoredFromCompleted" xml:space="preserve">
-    <value>自完成佇列中還原</value>
+    <value>从完成队列中还原</value>
   </data>
   <data name="PresetLabel" xml:space="preserve">
-    <value>設定值:</value>
+    <value>预设值：</value>
   </data>
   <data name="DestinationColumnHeader" xml:space="preserve">
-    <value>輸出位置</value>
+    <value>输出位置:</value>
   </data>
   <data name="StatusColumnHeader" xml:space="preserve">
-    <value>狀態</value>
+    <value>状态</value>
   </data>
   <data name="ElapsedTimeColumnHeader" xml:space="preserve">
-    <value>經過時間</value>
+    <value>已用时间</value>
   </data>
   <data name="PlayingVideoMessage" xml:space="preserve">
-    <value>播放視訊...</value>
+    <value>播放视频...</value>
   </data>
   <data name="FileDoesNotExist" xml:space="preserve">
     <value>{0} 不存在。</value>
   </data>
   <data name="AngleLabel" xml:space="preserve">
-    <value>角度:</value>
+    <value>角度：</value>
   </data>
   <data name="ChaptersSummary" xml:space="preserve">
     <value>/ {0}</value>
   </data>
   <data name="Queued" xml:space="preserve">
-    <value>工作佇列</value>
+    <value>队列</value>
   </data>
   <data name="QueuedWithTotal" xml:space="preserve">
-    <value>工作佇列 ({0})</value>
+    <value>工作队列 ({0})</value>
   </data>
   <data name="CompletedWithTotal" xml:space="preserve">
-    <value>完成佇列 ({0})</value>
+    <value>已完成队列 ({0})</value>
   </data>
   <data name="StoppedEncoding" xml:space="preserve">
-    <value>停止編碼。</value>
+    <value>停止编码。</value>
   </data>
   <data name="DeleteSourceFilesConfirmationMessage" xml:space="preserve">
-    <value>您確定要刪除 {0} 來源檔/資料夾 嗎?</value>
+    <value>您确实要删除 {0} 源文件 / 文件夹吗？</value>
   </data>
   <data name="DeleteSourceFilesConfirmationTitle" xml:space="preserve">
-    <value>確認刪除</value>
+    <value>确认删除</value>
   </data>
   <data name="CouldNotDeleteFile" xml:space="preserve">
-    <value>無法刪除 {0} {1}</value>
+    <value>无法删除 {0} {1}</value>
   </data>
   <data name="QueueMultipleScanErrorMessage" xml:space="preserve">
-    <value>下列檔案因無法辨識並未加入工作佇列: {0}</value>
+    <value>下列文件因无法辨识并未加入工作队列: {0}</value>
   </data>
   <data name="QueueMultipleScanErrorTitle" xml:space="preserve">
-    <value>掃描視訊檔時出現錯誤</value>
+    <value>扫描视频文件时出现错误</value>
   </data>
   <data name="StartedEncoding" xml:space="preserve">
-    <value>編碼已開始。</value>
+    <value>编码已开始</value>
   </data>
   <data name="DirectoryCreateErrorMessage" xml:space="preserve">
-    <value>無法建立輸出資料夾，錯誤詳情: {0}</value>
+    <value>无法建立输出文件夹，错误详情:
+ {0}</value>
   </data>
   <data name="DirectoryCreateErrorTitle" xml:space="preserve">
-    <value>建立資料夾時發生錯誤</value>
+    <value>创建目录时出错</value>
   </data>
   <data name="EncodeCompleted" xml:space="preserve">
-    <value>編碼已完成。</value>
+    <value>编码已完成</value>
   </data>
   <data name="EncodeCompleteBalloonTitle" xml:space="preserve">
-    <value>編碼已完成</value>
+    <value>编码已完成</value>
   </data>
   <data name="EncodeCompleteBalloonMessage" xml:space="preserve">
-    <value>VidCoder 已完成工作佇列中的所有作業。</value>
+    <value>VidCoder 已完成编码队列中的所有作业。</value>
   </data>
   <data name="OutputFolderRequiredMessage" xml:space="preserve">
-    <value>未設定預設輸出資料夾無法新增編碼工作，請點選確定選擇資料夾。</value>
+    <value>未设定默认输出文件夹无法新增编码工作，请点选确定选择文件夹。</value>
   </data>
   <data name="OutputFolderRequiredTitle" xml:space="preserve">
-    <value>預設輸出資料夾為必要設定</value>
+    <value>必须设置默认输出文件夹</value>
   </data>
   <data name="OutputPathNotValidMessage" xml:space="preserve">
-    <value>輸出路徑無效。</value>
+    <value>输出路径无效。</value>
   </data>
   <data name="OutputPathNotValidTitle" xml:space="preserve">
-    <value>路徑無效</value>
+    <value>路径无效</value>
   </data>
   <data name="Encode" xml:space="preserve">
-    <value>編碼</value>
+    <value>编码</value>
   </data>
   <data name="Resume" xml:space="preserve">
-    <value>繼續</value>
+    <value>继续</value>
   </data>
   <data name="EtaLabel" xml:space="preserve">
     <value>ETA:</value>
   </data>
   <data name="WhenDoneLabel" xml:space="preserve">
-    <value>完成時:</value>
+    <value>当完成时：</value>
   </data>
   <data name="Preset_AndroidTablet" xml:space="preserve">
     <value>Android 平板</value>
@@ -397,16 +398,16 @@
     <value>Android</value>
   </data>
   <data name="Preset_AppleiPad" xml:space="preserve">
-    <value>Apple iPad</value>
+    <value>苹果 iPad</value>
   </data>
   <data name="Preset_AppleiPhone4" xml:space="preserve">
-    <value>Apple iPhone 4</value>
+    <value>苹果 iPhone 4</value>
   </data>
   <data name="Preset_AppleiPhoneTouch" xml:space="preserve">
-    <value>Apple iPhone/Touch</value>
+    <value>苹果 iPhone/Touch</value>
   </data>
   <data name="Preset_AppleiPod" xml:space="preserve">
-    <value>Apple iPod</value>
+    <value>苹果 iPod</value>
   </data>
   <data name="Preset_AppleTV" xml:space="preserve">
     <value>AppleTV</value>
@@ -424,144 +425,144 @@
     <value>High Profile</value>
   </data>
   <data name="Preset_Normal" xml:space="preserve">
-    <value>標準</value>
+    <value>标准</value>
   </data>
   <data name="Preset_WindowsPhone7" xml:space="preserve">
     <value>Windows Phone 7</value>
   </data>
   <data name="SourceOption_VideoFile" xml:space="preserve">
-    <value>視訊檔...</value>
+    <value>视频文件...</value>
   </data>
   <data name="SourceOption_DiscFolder" xml:space="preserve">
-    <value>DVD/藍光 資料夾...</value>
+    <value>DVD 蓝光文件夹...</value>
   </data>
   <data name="NewVersionDownloadStartedStatus" xml:space="preserve">
-    <value>版本 {0} 可使用，已開始下載更新檔。</value>
+    <value>版本 {0} 可使用，已开始下载更新文件。</value>
   </data>
   <data name="NewVersionDownloadFinishedStatus" xml:space="preserve">
-    <value>版本 {0} 已下載完成，將於程式離開時安裝。</value>
+    <value>版本 {0} 已下载完成，将在程序退出时安装。</value>
   </data>
   <data name="UpdateNotAppliedError" xml:space="preserve">
-    <value>更新並未套用，若您非手動取消更新，請嘗試手動安裝更新。</value>
+    <value>更新并未被应用，若您非手动取消更新，请尝试手动安装更新。</value>
   </data>
   <data name="CouldNotLoadPresetMessage" xml:space="preserve">
-    <value>無法載入設定值:</value>
+    <value>不能加载预设值：</value>
   </data>
   <data name="CouldNotSavePresetMessage" xml:space="preserve">
-    <value>無法儲存設定值 '{0}':{1}{2}</value>
+    <value>不能保存预设值 '{0}': {1} {2}</value>
   </data>
   <data name="CouldNotCopyTextError" xml:space="preserve">
-    <value>無法複製文字。</value>
+    <value>无法复制的文本。</value>
   </data>
   <data name="LaunchUrlError" xml:space="preserve">
-    <value>開啟 URL 時發生錯誤: {0}</value>
+    <value>打开 URL 时出错: {0}</value>
   </data>
   <data name="UserConfigLoadError" xml:space="preserve">
-    <value>無法載入所需的使用者設定檔，檔案可能已毀損。您想要刪除設定檔嗎? 此動作不會影響到您已儲存的設定值。</value>
+    <value>无法加载所需的用户设置文件 ；它可能已损坏。你想要删除它吗？这不会影响您已保存的预设。</value>
   </data>
   <data name="UserConfigLoadErrorTitle" xml:space="preserve">
-    <value>載入設定時發生錯誤</value>
+    <value>加载设置时发生错误</value>
   </data>
   <data name="PresetImportErrorMessage" xml:space="preserve">
-    <value>無法匯入設定值，無法辨識格式。</value>
+    <value>不能导入预设，格式无法识别。</value>
   </data>
   <data name="PresetImportErrorTitle" xml:space="preserve">
-    <value>匯入錯誤</value>
+    <value>导入错误</value>
   </data>
   <data name="PresetImportSuccessMessage" xml:space="preserve">
-    <value>已成功匯入設定值 {0}。</value>
+    <value>成功导入预设值 {0}。</value>
   </data>
   <data name="PresetImportSuccessTitle" xml:space="preserve">
     <value>成功</value>
   </data>
   <data name="PresetExportSuccessMessage" xml:space="preserve">
-    <value>已成功匯出設定值至 {0}。</value>
+    <value>已成功导出到 {0} 预设</value>
   </data>
   <data name="PresetExportSuccessTitle" xml:space="preserve">
     <value>成功</value>
   </data>
   <data name="ExportPresetFilePickerText" xml:space="preserve">
-    <value>匯出設定值</value>
+    <value>导出预设</value>
   </data>
   <data name="PresetSaveConfirmMessage" xml:space="preserve">
-    <value>您想要儲存目前設定值的變更嗎?</value>
+    <value>你想要将更改保存到您当前预设吗？</value>
   </data>
   <data name="PresetSaveConfirmTitle" xml:space="preserve">
-    <value>儲存目前的設定值?</value>
+    <value>保存当前预设值？</value>
   </data>
   <data name="PresetRevertConfirmMessage" xml:space="preserve">
-    <value>您想要還原此設定值所有未儲存的變更嗎?</value>
+    <value>您想要还原此设定值所有未保存的更改吗?</value>
   </data>
   <data name="PresetRevertConfirmTitle" xml:space="preserve">
-    <value>還原設定值</value>
+    <value>恢复预设值</value>
   </data>
   <data name="PresetRemoveConfirmMessage" xml:space="preserve">
-    <value>您確定要移除此設定值嗎?</value>
+    <value>您确认要删除此预设值吗?</value>
   </data>
   <data name="PresetRemoveConfirmTitle" xml:space="preserve">
-    <value>移除設定值</value>
+    <value>删除预设</value>
   </data>
   <data name="UserConfigCorrupted" xml:space="preserve">
-    <value>設定檔損毀無法載入，您的部分設定可能會被重置。</value>
+    <value>配置已损坏，无法加载。您的某些设置可能会被重置。</value>
   </data>
   <data name="OutputDirectoryPickerText" xml:space="preserve">
-    <value>選擇編碼檔案的輸出資料夾。</value>
+    <value>选择已编码的视频文件的输出目录。</value>
   </data>
   <data name="LengthPreviewLabel" xml:space="preserve">
     <value>({0})</value>
   </data>
   <data name="ModifiedAffix" xml:space="preserve">
-    <value>(已修改)</value>
+    <value>（已修改）</value>
   </data>
   <data name="PlayingVideoStatus" xml:space="preserve">
-    <value>播放視訊中...</value>
+    <value>播放视频中...</value>
   </data>
   <data name="OpeningFolderStatus" xml:space="preserve">
-    <value>開啟資料夾中...</value>
+    <value>打开文件夹...</value>
   </data>
   <data name="CloseVideoSourceToolTip" xml:space="preserve">
-    <value>關閉視訊來源</value>
+    <value>关闭视频源</value>
   </data>
   <data name="CloseVideoSourceMenuItem" xml:space="preserve">
-    <value>關閉視訊來源</value>
+    <value>关闭视频源</value>
   </data>
   <data name="UpdatesMenuItem" xml:space="preserve">
     <value>更新...</value>
   </data>
   <data name="CbrAuto" xml:space="preserve">
-    <value>自動 CBR</value>
+    <value>自动CBR</value>
   </data>
   <data name="RangeBarToolTip" xml:space="preserve">
-    <value>左鍵點擊設定起始時間，右鍵點擊設定結束時間。</value>
+    <value>左键单击要设置的开始时间，用鼠标右键单击要设置的结束时间。</value>
   </data>
   <data name="Preset_WindowsPhone8" xml:space="preserve">
     <value>Windows Phone 8</value>
   </data>
   <data name="QueueFormat_Chapters" xml:space="preserve">
-    <value>章節 {0}</value>
+    <value>Ch {0}</value>
   </data>
   <data name="QueueFormat_Frames" xml:space="preserve">
-    <value>畫格 {0}-{1}</value>
+    <value>Fr {0}-{1}</value>
   </data>
   <data name="QueueRangeAll" xml:space="preserve">
     <value>全部</value>
   </data>
   <data name="CouldNotCopyLogError" xml:space="preserve">
-    <value>無法複製記錄: {0}{0}{1}</value>
+    <value>无法复制日志： {0} {0} {1}</value>
   </data>
   <data name="OpenLog" xml:space="preserve">
-    <value>開啟記錄</value>
+    <value>打开日志</value>
   </data>
   <data name="CopyLog" xml:space="preserve">
-    <value>複製記錄</value>
+    <value>复制日志</value>
   </data>
   <data name="PresetDiscardConfirmMessage" xml:space="preserve">
-    <value>您尚未儲存變更，您確定要放棄變更並切換至其他的設定值嗎?</value>
+    <value>你有未保存的更改。你确定你要放弃这些更改通过切换到其它预设值吗？</value>
   </data>
   <data name="PresetDiscardConfirmTitle" xml:space="preserve">
-    <value>放棄變更?</value>
+    <value>放弃更改吗？</value>
   </data>
 	<data name="RemoveAudioTrackToolTip" xml:space="preserve">
-    <value>移除音軌</value>
+    <value>删除音频轨</value>
   </data>
 </root>
