--- a/VidCoder/Resources/OptionsRes.zh-Hant.resx
+++ b/VidCoder/Resources/OptionsRes.zh-Hant.resx
@@ -118,196 +118,196 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AutoAudioDisabledToolTip" xml:space="preserve">
-    <value>自动字幕选择停用时，自动选取上次的选择。</value>
+    <value>自動字幕選擇停用時，自動選取上次的選項。</value>
   </data>
   <data name="AutoSubtitleDisabledToolTip" xml:space="preserve">
-    <value>自动字幕选择停用时，自动选取上次的选项。</value>
+    <value>自動字幕選擇停用時，自動選取上次的選項。</value>
   </data>
   <data name="GeneralTab" xml:space="preserve">
-    <value>一般设置</value>
+    <value>一般設定</value>
   </data>
   <data name="MinimizeToTaskBarRadioButton" xml:space="preserve">
-    <value>最小化到任务栏</value>
+    <value>最小化至工作列</value>
   </data>
   <data name="MinimizeToSystemTrayRadioButton" xml:space="preserve">
-    <value>最小化到系统托盘</value>
+    <value>最小化至系統列</value>
   </data>
   <data name="PlaySoundOnQueueCompletionCheckBox" xml:space="preserve">
-    <value>队列完成播放声音</value>
+    <value>工作佇列完成後播放音效</value>
   </data>
   <data name="PreferredDvdPlayerLabel" xml:space="preserve">
-    <value>首选的 DVD 播放机：</value>
+    <value>偏好的 DVD 播放器:</value>
   </data>
   <data name="PreferredDvdPlayerToolTip" xml:space="preserve">
-    <value>选择您想用来使用 DVD 的播放器。</value>
+    <value>選擇您想用來檢視 DVD 的播放器。</value>
   </data>
   <data name="AutomaticUpdatesCheckBox" xml:space="preserve">
-    <value>自动更新</value>
+    <value>自動更新</value>
   </data>
   <data name="JoinBetaTrackCheckBox" xml:space="preserve">
-    <value>加入 Beta 更新</value>
+    <value>追蹤 Beta 更新</value>
   </data>
   <data name="FileNamingTab" xml:space="preserve">
-    <value>文件命名</value>
+    <value>檔案命名</value>
   </data>
   <data name="DefaultFolderLabel" xml:space="preserve">
-    <value>默认文件夹：</value>
+    <value>預設資料夾:</value>
   </data>
   <data name="FileFormatLabel" xml:space="preserve">
-    <value>文件格式：</value>
+    <value>檔案格式:</value>
   </data>
   <data name="OutputToSourceDirCheckBox" xml:space="preserve">
-    <value>若可行，将输出文件夹指向源数据文件夹</value>
+    <value>若可行，將輸出資料夾指向來源資料夾</value>
   </data>
   <data name="DefaultFormatRadioButton" xml:space="preserve">
-    <value>默认的格式</value>
+    <value>預設格式</value>
   </data>
   <data name="CustomFormatRadioButton" xml:space="preserve">
-    <value>自定义格式：</value>
+    <value>自訂格式:</value>
   </data>
   <data name="FileNameFormatOptions" xml:space="preserve">
-    <value>可用的选项: {0}</value>
+    <value>可用選項: {0}</value>
   </data>
   <data name="WhenFileAlreadyExists" xml:space="preserve">
-    <value>当文件已存在时......</value>
+    <value>當檔案存在時...</value>
   </data>
   <data name="EncodingSingleFile" xml:space="preserve">
-    <value>单个文件的编码：</value>
+    <value>編碼單一檔案:</value>
   </data>
   <data name="AskOverwriteRadioButton" xml:space="preserve">
-    <value>覆盖文件时询问</value>
+    <value>覆寫檔案時詢問</value>
   </data>
   <data name="OverwriteWithoutPromptRadioButton" xml:space="preserve">
-    <value>覆盖文件不提示</value>
+    <value>覆寫檔案時不詢問</value>
   </data>
   <data name="AutomaticallySwitchNameRadioButton" xml:space="preserve">
-    <value>自动切换到一个不同的名称</value>
+    <value>自動切換至不同名稱</value>
   </data>
   <data name="EncodingBatchOfFiles" xml:space="preserve">
-    <value>批量编码文件：</value>
+    <value>批次編碼檔案:</value>
   </data>
   <data name="OverwriteRadioButton" xml:space="preserve">
-    <value>覆盖</value>
+    <value>覆寫</value>
   </data>
   <data name="AutomaticallyRenameRadioButton" xml:space="preserve">
-    <value>自动重命名</value>
+    <value>自動重新命名</value>
   </data>
   <data name="AutomaticAudioSelection" xml:space="preserve">
-    <value>自动音频选择</value>
+    <value>自動音訊選擇</value>
   </data>
   <data name="AudioSubtitlesTab" xml:space="preserve">
-    <value>音频/字幕</value>
+    <value>音訊 / 字幕</value>
   </data>
   <data name="LanguageRadioButton" xml:space="preserve">
-    <value>语言：</value>
+    <value>語言:</value>
   </data>
   <data name="IncludeAllTracksCheckBox" xml:space="preserve">
-    <value>包括所有轨道</value>
+    <value>包含所有軌道</value>
   </data>
   <data name="AutomaticSubtitleSelection" xml:space="preserve">
-    <value>自动选择字幕</value>
+    <value>自動選擇字幕</value>
   </data>
   <data name="ForeignAudioSearchRadioButton" xml:space="preserve">
-    <value>外语音频搜索</value>
+    <value>外語音訊搜尋</value>
   </data>
   <data name="BurnInCheckBox" xml:space="preserve">
-    <value>内嵌</value>
+    <value>內嵌</value>
   </data>
   <data name="OnlyIfDifferentFromAudioCheckBox" xml:space="preserve">
-    <value>仅选取与音频不同的语言</value>
+    <value>僅選取與音訊相異的語言</value>
   </data>
   <data name="AutoPauseLabel" xml:space="preserve">
-    <value>当以下处理程序执行时自动暂停编码:</value>
+    <value>當以下處理程序執行時自動暫停編碼:</value>
   </data>
   <data name="AddEllipsesButton" xml:space="preserve">
-    <value>添加...</value>
+    <value>新增...</value>
   </data>
   <data name="PreviewCountLabel" xml:space="preserve">
-    <value>预览画面扫描数:</value>
+    <value>預覽畫面掃描數:</value>
   </data>
   <data name="RememberPreviousFilesCheckBox" xml:space="preserve">
-    <value>记住以前使用过的文件和文件夹</value>
+    <value>記錄先前使用的檔案及資料夾</value>
   </data>
   <data name="AllowCustomAudioTrackNamesCheckBox" xml:space="preserve">
-    <value>允许音轨设定自定义名称 (非所有播放器都支持)</value>
+    <value>允許音軌設定自訂名稱 (非所有播放器皆支援)</value>
   </data>
   <data name="EnableLibDvdNavCheckBox" xml:space="preserve">
-    <value>启用的 LibDVDNav （更改需要重新启动程序）</value>
+    <value>啟用 LibDVDNav (需重新啟動程式套用變更)</value>
   </data>
   <data name="KeepScansAfterCompletionCheckBox" xml:space="preserve">
-    <value>完成后保留扫描结果 (可编辑完成项目)</value>
+    <value>完成後保留掃描結果 (可編輯完成項目)</value>
   </data>
   <data name="DeleteSourceAfterCompletionCheckBox" xml:space="preserve">
-    <value>清除完成项目后删除来源文件 (会弹出确认对话窗口)</value>
+    <value>清除完成項目後刪除來源檔案 (會彈出確認對話視窗)</value>
   </data>
   <data name="LoggingVerbosityLabel" xml:space="preserve">
-    <value>日志记录的详细程信息：</value>
+    <value>記錄詳細度:</value>
   </data>
   <data name="MinScanLengthLabel" xml:space="preserve">
-    <value>最小扫描长度 (秒):</value>
+    <value>最小掃描長度 (秒):</value>
   </data>
   <data name="RecognizedExtensionsLabel" xml:space="preserve">
-    <value>允许的扩展名:</value>
+    <value>認可的副檔名:</value>
   </data>
   <data name="RecognizedExtensionsToolTip" xml:space="preserve">
-    <value>搜寻文件夹时新增列表中扩展名的文件。 (以半角逗点分隔)</value>
+    <value>搜尋資料夾時新增列表中副檔名的檔案。 (以半形逗點分隔)</value>
   </data>
   <data name="OptionsDialogTitle" xml:space="preserve">
-    <value>选项</value>
+    <value>選項</value>
   </data>
   <data name="ProcessesTab" xml:space="preserve">
-    <value>进程</value>
+    <value>處理程序</value>
   </data>
   <data name="AdvancedTab" xml:space="preserve">
-    <value>高级设置</value>
+    <value>進階</value>
   </data>
   <data name="BetaUpdatesInBeta" xml:space="preserve">
-    <value>您在使用 Beta 版，欲换回稳定版本，请卸载、点选「是」移除设定值后重新安装稳定版本。</value>
+    <value>您已追蹤 Beta 版，欲換回穩定版本，請解除安裝、點選「是」移除設定值後重新安裝穩定版本。</value>
   </data>
   <data name="BetaUpdatesNonBeta" xml:space="preserve">
-    <value>加入 Beta 版获得更频繁的更新</value>
+    <value>追蹤 Beta 取得更頻繁的更新</value>
   </data>
   <data name="UpdateReadyStatus" xml:space="preserve">
-    <value>更新 {0} 准备好了。将在退出该程序时安装。</value>
+    <value>更新 {0} 已準備好，將於您離開程式時安裝。</value>
   </data>
   <data name="DownloadingStatus" xml:space="preserve">
-    <value>正在下载更新 {0}:</value>
+    <value>下載更新中 {0}:</value>
   </data>
   <data name="UpToDateStatus" xml:space="preserve">
-    <value>VidCoder 已是最新版本。</value>
+    <value>VidCoder 為最新版。</value>
   </data>
   <data name="ChooseDefaultOutputFolder" xml:space="preserve">
-    <value>选择编码的视频文件的默认输出目录。</value>
+    <value>選取編碼視訊檔的預設輸出資料夾。</value>
   </data>
   <data name="InterfaceLanguageLabel" xml:space="preserve">
-    <value>界面语言：</value>
+    <value>介面語言:</value>
   </data>
   <data name="NewLanguageRestartDialogMessage" xml:space="preserve">
-    <value>新的语言将在您退出并重新启动 VidCoder 后生效。</value>
+    <value>新語言設定將於您離開 VidCoder 重新啟動後生效。</value>
   </data>
   <data name="UseOSLanguage" xml:space="preserve">
-    <value>使用操作系统语言</value>
+    <value>使用作業系統語言</value>
   </data>
   <data name="UpdatesTab" xml:space="preserve">
     <value>更新</value>
   </data>
   <data name="DownloadingInfoStatus" xml:space="preserve">
-    <value>检查最新版本......</value>
+    <value>尋找最新版本中...</value>
   </data>
   <data name="UpdateFailedStatus" xml:space="preserve">
-    <value>检查更新失败。</value>
+    <value>更新檢查失敗。</value>
   </data>
   <data name="CompletionWavFilePickTitle" xml:space="preserve">
-    <value>选择您想要用于完成声音的.wav 文件。</value>
+    <value>選取完成編碼後播放的 .wav 音效檔。</value>
   </data>
   <data name="CurrentVersionLabel" xml:space="preserve">
-    <value>当前版本: {0}</value>
+    <value>目前版本: {0}</value>
   </data>
   <data name="BetaUpdatesNonBetaWarning" xml:space="preserve">
-    <value>注意： 此版本是更有可能有 bug 和崩溃。</value>
+    <value>注意: 此版本可能有更多臭蟲及更高的程式錯誤頻率。</value>
   </data>
   <data name="LanguagesSection" xml:space="preserve">
-    <value>语言</value>
+    <value>語言</value>
   </data>
   <data name="PlayersSection" xml:space="preserve">
     <value>播放器</value>
@@ -316,84 +316,84 @@
     <value>音效</value>
   </data>
   <data name="SystemTraySection" xml:space="preserve">
-    <value>系统托盘</value>
+    <value>系統列</value>
   </data>
   <data name="OutputFolderSection" xml:space="preserve">
-    <value>输出文件夹</value>
+    <value>輸出資料夾</value>
   </data>
   <data name="NamingFormatSection" xml:space="preserve">
     <value>命名格式</value>
   </data>
   <data name="AdvancedOptionsSection" xml:space="preserve">
-    <value>高级选项</value>
+    <value>進階選項</value>
   </data>
   <data name="ScanningSection" xml:space="preserve">
-    <value>扫描</value>
+    <value>掃描</value>
   </data>
   <data name="LoggingSection" xml:space="preserve">
-    <value>日志记录</value>
+    <value>記錄</value>
   </data>
   <data name="DvdReadingSection" xml:space="preserve">
-    <value>DVD 读取中</value>
+    <value>DVD 讀取</value>
   </data>
   <data name="UpdatesSection" xml:space="preserve">
     <value>更新</value>
   </data>
   <data name="UpdateStatusSection" xml:space="preserve">
-    <value>状态</value>
+    <value>狀態</value>
   </data>
   <data name="BetaSection" xml:space="preserve">
     <value>Beta</value>
   </data>
   <data name="UseCustomWavLabel" xml:space="preserve">
-    <value>使用自定义.wav 文件:</value>
+    <value>使用自訂 .wav 檔:</value>
   </data>
   <data name="CheckNowButton" xml:space="preserve">
-    <value>立即检查</value>
+    <value>立即檢查</value>
   </data>
   <data name="UseSystemPlayer" xml:space="preserve">
-    <value>使用系统播放器</value>
+    <value>使用系統播放器</value>
   </data>
   <data name="VideoFilesLabel" xml:space="preserve">
-    <value>视频文件：</value>
+    <value>視訊檔:</value>
   </data>
   <data name="CustomVideoPlayerToolTip" xml:space="preserve">
-    <value>指定预览文件用的视频播放器路径。</value>
+    <value>指定檢視檔案用的視訊播放器路徑。</value>
   </data>
   <data name="VideoPlayerFilePickTitle" xml:space="preserve">
-    <value>选择用于预览视频文件的播放器。</value>
+    <value>選擇用於檢視視訊檔的播放器。</value>
   </data>
   <data name="CustomPlayerLabel" xml:space="preserve">
-    <value>自定义播放器：</value>
+    <value>自訂播放器:</value>
   </data>
   <data name="Priority_High" xml:space="preserve">
     <value>高</value>
   </data>
   <data name="Priority_AboveNormal" xml:space="preserve">
-    <value>标准以上</value>
+    <value>標準以上</value>
   </data>
   <data name="Priority_Normal" xml:space="preserve">
-    <value>标准</value>
+    <value>標準</value>
   </data>
   <data name="Priority_BelowNormal" xml:space="preserve">
-    <value>标准以下</value>
+    <value>標準以下</value>
   </data>
   <data name="WorkerProcessPriorityLabel" xml:space="preserve">
-    <value>Worker 处理程序优先级:</value>
+    <value>Worker 處理程序優先順序:</value>
   </data>
   <data name="Priority_Idle" xml:space="preserve">
     <value>低</value>
   </data>
 	<data name="CopyLogToOutputFolderLabel" xml:space="preserve">
-    <value>复制编码记录至编码文件的文件夹下</value>
+    <value>複製編碼記錄至編碼檔案的資料夾下</value>
   </data>
 	<data name="OpenLogFolderButton" xml:space="preserve">
-    <value>打开日志文件夹</value>
+    <value>開啟記錄資料夾</value>
   </data>
 	<data name="ResumeEncodingOnRestartCheckBox" xml:space="preserve">
-    <value>重新启动时自动继续编码</value>
+    <value>重新啟動時自動繼續編碼</value>
   </data>
 	<data name="UseWorkerProcessCheckBox" xml:space="preserve">
-    <value>使用辅助进程进行编码</value>
+    <value>使用 Worker 處理程序編碼</value>
   </data>
 </root>
