--- a/VidCoder/Resources/PreviewRes.it.resx
+++ b/VidCoder/Resources/PreviewRes.it.resx
@@ -118,66 +118,66 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="PlaySourceButton" xml:space="preserve">
-    <value>Reproduzir fonte</value>
+    <value>Play Sorgente</value>
   </data>
   <data name="EncodePreviewClipButton" xml:space="preserve">
-    <value>Codificar pré-visualização</value>
+    <value>Codifica Clip di anteprima</value>
   </data>
   <data name="EncodePreviewClipToolTip" xml:space="preserve">
-    <value>Codifica e lê um pequeno excerto de pré-visualização da tela seleccionada. Usa as configurações de codificação actuais.</value>
+    <value>Codifica e gioca una piccola anteprima clip dallo schermo selezionato. Utilizza le impostazioni di codifica corrente.</value>
   </data>
   <data name="GeneratingPreview" xml:space="preserve">
-    <value>Gerando pré-visualização...</value>
+    <value>Sto generando l'anteprima...</value>
   </data>
   <data name="PlaySourceDisabledBluRayToolTip" xml:space="preserve">
-    <value>Pré-visualização do Blu-Ray de origem ainda não é suportada.</value>
+    <value>Anteprima di origine per Blu-ray non è ancora supportato.</value>
   </data>
   <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
-    <value>Não foi encontrado nenhum leitor de DVD. Instale o VLC ou o MPC-HC para utilizar este recurso.</value>
+    <value>Non è stato trovato un lettore DVD supportato. Installare VLC o MPC-HC per utilizzare questa funzionalità.</value>
   </data>
   <data name="PlaySourceToolTip" xml:space="preserve">
-    <value>Reproduzir o vídeo de origem.</value>
+    <value>Riproduce il video sorgente.</value>
   </data>
   <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
-    <value>Falha ao gerar excerto de pré-visualização. Consulte o relatório para mais detalhes.</value>
+    <value>Anteprima clip generazione non riuscita. Vedere la finestra di Log per i dettagli.</value>
   </data>
   <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
-    <value>Geração do excerto de pré-visualização falhou</value>
+    <value>Generazione di clip di anteprima non riuscita</value>
   </data>
   <data name="PreviewWindowTitleSimple" xml:space="preserve">
-    <value>Pré-visualização: {0} x {1}</value>
+    <value>Anteprima: {0} x {1}</value>
   </data>
   <data name="PreviewWindowTitleComplex" xml:space="preserve">
-    <value>Pré-visualização: Exibir {0} x {1} - Armazenamento {2} x {3}</value>
+    <value>Anteprima: Visualizzazione {0} x {1} - Storage {2} x {3}</value>
   </data>
   <data name="NoVideoSourceTitle" xml:space="preserve">
-    <value>Pré-Visualização: Nenhuma fonte de vídeo</value>
+    <value>Anteprima: Nessuna sorgente video</value>
   </data>
   <data name="Seconds" xml:space="preserve">
-    <value>segundos</value>
+    <value>secondi</value>
   </data>
   <data name="PreviewDisplay_Corners" xml:space="preserve">
-    <value>Cantos</value>
+    <value>Angoli</value>
   </data>
   <data name="PreviewDisplay_FitToWindow" xml:space="preserve">
-    <value>Ajustar à janela</value>
+    <value>Adatta alla finestra</value>
   </data>
   <data name="PreviewDisplay_OneToOne" xml:space="preserve">
     <value>1:1</value>
   </data>
   <data name="ViewLabel" xml:space="preserve">
-    <value>Visualizar:</value>
+    <value>Visualizza:</value>
   </data>
   <data name="TopMargin" xml:space="preserve">
-    <value>Margem superior</value>
+    <value>Margine superiore</value>
   </data>
   <data name="LeftMargin" xml:space="preserve">
-    <value>Margem esquerda</value>
+    <value>Margine sinistro</value>
   </data>
   <data name="RightMargin" xml:space="preserve">
-    <value>Margem direita</value>
+    <value>Margine destro</value>
   </data>
   <data name="BottomMargin" xml:space="preserve">
-    <value>Margem inferior</value>
+    <value>Margine inferiore</value>
   </data>
 </root>
