--- a/VidCoder/Resources/PreviewRes.zh-Hant.resx
+++ b/VidCoder/Resources/PreviewRes.zh-Hant.resx
@@ -118,66 +118,66 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="PlaySourceButton" xml:space="preserve">
-    <value>Reproduzir fonte</value>
+    <value>播放來源影片</value>
   </data>
   <data name="EncodePreviewClipButton" xml:space="preserve">
-    <value>Codificar pré-visualização</value>
+    <value>編碼預覽影片</value>
   </data>
   <data name="EncodePreviewClipToolTip" xml:space="preserve">
-    <value>Codifica e lê um pequeno excerto de pré-visualização da tela seleccionada. Usa as configurações de codificação actuais.</value>
+    <value>使用目前的編碼設定將選擇的影片編碼為小段的預覽影片後播放。</value>
   </data>
   <data name="GeneratingPreview" xml:space="preserve">
-    <value>Gerando pré-visualização...</value>
+    <value>產生預覽影片中...</value>
   </data>
   <data name="PlaySourceDisabledBluRayToolTip" xml:space="preserve">
-    <value>Pré-visualização do Blu-Ray de origem ainda não é suportada.</value>
+    <value>目前尚未支援藍光影片的預覽功能。</value>
   </data>
   <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
-    <value>Não foi encontrado nenhum leitor de DVD. Instale o VLC ou o MPC-HC para utilizar este recurso.</value>
+    <value>找不到支援的 DVD 播放器，請安裝 VLC 或 MPC-HC 以使用這個功能。</value>
   </data>
   <data name="PlaySourceToolTip" xml:space="preserve">
-    <value>Reproduzir o vídeo de origem.</value>
+    <value>播放來源視訊。</value>
   </data>
   <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
-    <value>Falha ao gerar excerto de pré-visualização. Consulte o relatório para mais detalhes.</value>
+    <value>預覽影片建立失敗，請參考記錄視窗中的詳細資訊。</value>
   </data>
   <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
-    <value>Geração do excerto de pré-visualização falhou</value>
+    <value>預覽影片建立失敗</value>
   </data>
   <data name="PreviewWindowTitleSimple" xml:space="preserve">
-    <value>Pré-visualização: {0} x {1}</value>
+    <value>預覽: {0}x{1}</value>
   </data>
   <data name="PreviewWindowTitleComplex" xml:space="preserve">
-    <value>Pré-visualização: Exibir {0} x {1} - Armazenamento {2} x {3}</value>
+    <value>預覽: 顯示 {0}x{1} - 原始 {2}x{3}</value>
   </data>
   <data name="NoVideoSourceTitle" xml:space="preserve">
-    <value>Pré-Visualização: Nenhuma fonte de vídeo</value>
+    <value>預覽: 無視訊來源</value>
   </data>
   <data name="Seconds" xml:space="preserve">
-    <value>segundos</value>
+    <value>秒</value>
   </data>
   <data name="PreviewDisplay_Corners" xml:space="preserve">
-    <value>Cantos</value>
+    <value>邊角檢視</value>
   </data>
   <data name="PreviewDisplay_FitToWindow" xml:space="preserve">
-    <value>Ajustar à janela</value>
+    <value>縮放至整個視窗</value>
   </data>
   <data name="PreviewDisplay_OneToOne" xml:space="preserve">
     <value>1:1</value>
   </data>
   <data name="ViewLabel" xml:space="preserve">
-    <value>Visualizar:</value>
+    <value>檢視:</value>
   </data>
   <data name="TopMargin" xml:space="preserve">
-    <value>Margem superior</value>
+    <value>頂端</value>
   </data>
   <data name="LeftMargin" xml:space="preserve">
-    <value>Margem esquerda</value>
+    <value>左側</value>
   </data>
   <data name="RightMargin" xml:space="preserve">
-    <value>Margem direita</value>
+    <value>右側</value>
   </data>
   <data name="BottomMargin" xml:space="preserve">
-    <value>Margem inferior</value>
+    <value>底部</value>
   </data>
 </root>
