--- a/VidCoder/Resources/QueueTitlesRes.zh-Hant.resx
+++ b/VidCoder/Resources/QueueTitlesRes.zh-Hant.resx
@@ -117,67 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PlaySourceButton" xml:space="preserve">
-    <value>Reproduzir fonte</value>
+  <data name="OverrideTitleNumberToolTip" xml:space="preserve">
+    <value>選擇此選項時，將覆寫輸出檔名的編號順序。比方說原本的標題為 2、3、4，當以 7 覆寫時輸出檔將命名為 7、8、9，此功能在轉錄電視影集時很有幫助。</value>
   </data>
-  <data name="EncodePreviewClipButton" xml:space="preserve">
-    <value>Codificar pré-visualização</value>
-  </data>
-  <data name="EncodePreviewClipToolTip" xml:space="preserve">
-    <value>Codifica e lê um pequeno excerto de pré-visualização da tela seleccionada. Usa as configurações de codificação actuais.</value>
-  </data>
-  <data name="GeneratingPreview" xml:space="preserve">
-    <value>Gerando pré-visualização...</value>
-  </data>
-  <data name="PlaySourceDisabledBluRayToolTip" xml:space="preserve">
-    <value>Pré-visualização do Blu-Ray de origem ainda não é suportada.</value>
-  </data>
-  <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
-    <value>Não foi encontrado nenhum leitor de DVD. Instale o VLC ou o MPC-HC para utilizar este recurso.</value>
+  <data name="QueueTitlesWindowHeader" xml:space="preserve">
+    <value>選擇多個章節標題以新增至工作佇列。</value>
   </data>
   <data name="PlaySourceToolTip" xml:space="preserve">
-    <value>Reproduzir o vídeo de origem.</value>
+    <value>若已安裝支援的播放器 (VLC 或 Media Player Classic Home Cinema)，可提供預覽 DVD 各章節標題的功能</value>
   </data>
-  <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
-    <value>Falha ao gerar excerto de pré-visualização. Consulte o relatório para mais detalhes.</value>
+  <data name="PlaySourceButton" xml:space="preserve">
+    <value>播放來源影片</value>
   </data>
-  <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
-    <value>Geração do excerto de pré-visualização falhou</value>
+  <data name="LengthRangePre" xml:space="preserve">
+    <value>所有章節標題</value>
+    <comment>Goes before the first number box in the length range specification.</comment>
   </data>
-  <data name="PreviewWindowTitleSimple" xml:space="preserve">
-    <value>Pré-visualização: {0} x {1}</value>
+  <data name="LengthRangeMid" xml:space="preserve">
+    <value>至</value>
+    <comment>Goes in between the two number boxes in the length range specification.</comment>
   </data>
-  <data name="PreviewWindowTitleComplex" xml:space="preserve">
-    <value>Pré-visualização: Exibir {0} x {1} - Armazenamento {2} x {3}</value>
+  <data name="LengthRangePost" xml:space="preserve">
+    <value>分鐘</value>
+    <comment>Goes after the second number box in the length range specification.</comment>
   </data>
-  <data name="NoVideoSourceTitle" xml:space="preserve">
-    <value>Pré-Visualização: Nenhuma fonte de vídeo</value>
+  <data name="OverrideTitleCheckBox">
+    <value xml:space="preserve">覆寫標題 #: 起始於</value>
   </data>
-  <data name="Seconds" xml:space="preserve">
-    <value>segundos</value>
+  <data name="OverrideNameFormatCheckBox">
+    <value xml:space="preserve">覆寫命名格式:</value>
   </data>
-  <data name="PreviewDisplay_Corners" xml:space="preserve">
-    <value>Cantos</value>
+  <data name="QueueTitlesDialogTitle">
+    <value xml:space="preserve">新增多個章節標題至工作佇列</value>
   </data>
-  <data name="PreviewDisplay_FitToWindow" xml:space="preserve">
-    <value>Ajustar à janela</value>
-  </data>
-  <data name="PreviewDisplay_OneToOne" xml:space="preserve">
-    <value>1:1</value>
-  </data>
-  <data name="ViewLabel" xml:space="preserve">
-    <value>Visualizar:</value>
-  </data>
-  <data name="TopMargin" xml:space="preserve">
-    <value>Margem superior</value>
-  </data>
-  <data name="LeftMargin" xml:space="preserve">
-    <value>Margem esquerda</value>
-  </data>
-  <data name="RightMargin" xml:space="preserve">
-    <value>Margem direita</value>
-  </data>
-  <data name="BottomMargin" xml:space="preserve">
-    <value>Margem inferior</value>
+  <data name="TitleFormat">
+    <value xml:space="preserve">標題 {0}</value>
   </data>
 </root>
