--- a/VidCoder/Resources/QueueTitlesRes.zh.resx
+++ b/VidCoder/Resources/QueueTitlesRes.zh.resx
@@ -118,19 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="OverrideTitleNumberToolTip" xml:space="preserve">
-    <value>選擇此選項時，將覆寫輸出檔名的編號順序。比方說原本的標題為 2、3、4，當以 7 覆寫時輸出檔將命名為 7、8、9，此功能在轉錄電視影集時很有幫助。</value>
+    <value>选择此选项时，将覆写输出文件名的编号顺序。比方说原本的标题为 2、3、4，当以 7 覆写时输出档将命名为 7、8、9，此功能在转录电视影集时很有帮助。</value>
   </data>
   <data name="QueueTitlesWindowHeader" xml:space="preserve">
-    <value>選擇多個章節標題以新增至工作佇列。</value>
+    <value>选择多个章节标题以新增至工作队列。</value>
   </data>
   <data name="PlaySourceToolTip" xml:space="preserve">
-    <value>若已安裝支援的播放器 (VLC 或 Media Player Classic Home Cinema)，可提供預覽 DVD 各章節標題的功能</value>
+    <value>若已安装支持的播放器 (VLC 或 Media Player Classic Home Cinema)，可提供预览 DVD 各章节标题的功能</value>
   </data>
   <data name="PlaySourceButton" xml:space="preserve">
-    <value>播放來源影片</value>
+    <value>播放来源影片</value>
   </data>
   <data name="LengthRangePre" xml:space="preserve">
-    <value>所有章節標題</value>
+    <value>所有章节标题</value>
     <comment>Goes before the first number box in the length range specification.</comment>
   </data>
   <data name="LengthRangeMid" xml:space="preserve">
@@ -138,19 +138,19 @@
     <comment>Goes in between the two number boxes in the length range specification.</comment>
   </data>
   <data name="LengthRangePost" xml:space="preserve">
-    <value>分鐘</value>
+    <value>分钟</value>
     <comment>Goes after the second number box in the length range specification.</comment>
   </data>
   <data name="OverrideTitleCheckBox">
-    <value xml:space="preserve">覆寫標題 #: 起始於</value>
+    <value xml:space="preserve">覆写标题 #: 起始于</value>
   </data>
   <data name="OverrideNameFormatCheckBox">
-    <value xml:space="preserve">覆寫命名格式:</value>
+    <value xml:space="preserve">覆写命名格式:</value>
   </data>
   <data name="QueueTitlesDialogTitle">
-    <value xml:space="preserve">新增多個章節標題至工作佇列</value>
+    <value xml:space="preserve">新增多个章节标题至工作队列</value>
   </data>
   <data name="TitleFormat">
-    <value xml:space="preserve">標題 {0}</value>
+    <value xml:space="preserve">标题 {0}</value>
   </data>
 </root>
